# ai_travel_planner

./: 1.py  ex.ipynb
backend/: main.py  mock_data.py  pyproject.toml  response_output.txt
backend/agents/: budget.py  destination.py  flight.py  food.py  hotel.py  itinerary.py  supervisor.py  team.py
backend/config/: llm.py
backend/models/: flight.py  supervisor.py
backend/tools/: exa.py  google_flight.py  kayak_hotel.py  scrape.py
